--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,21 @@
 h1, h2, h3 {
     font-family: 'Aref Ruqaa', sans-serif;
 }
+
+.navbar, .home-callout {
+    //Gradient provided by UI Gradient Vice City
+    background: #3494E6; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #3494E6 , #EC6EAD); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #3494E6 , #EC6EAD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar {
+    border:none;
+}
+
+.home-callout {
+    color:white;
+    margin-top: -20px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
