--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1> Welcome to my experimental database... </h1>
+<div class="home-callout text-center container-fluid">
+    <h1> Welcome to my experimental database... </h1>
+    <h3>Where researchers make each other's lives easier</h3>
+</div>
