Refractored wit sass

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,10 +17,12 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+//Typography Styles 
 h1, h2, h3 {
     font-family: 'Aref Ruqaa', sans-serif;
 }
 
+//Background and Gradient
 .navbar, .home-callout {
     //Gradient provided by UI Gradient Vice City
     background: #3494E6; /* fallback for old browsers */
@@ -28,10 +30,21 @@ h1, h2, h3 {
     background: linear-gradient(to left, #3494E6 , #EC6EAD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+//Nav Styles
 .navbar {
     border:none;
 }
 
+.navbar-default .navbar-brand, 
+.navbar-default .navbar-nav > li > a {
+    color:white;
+    &:hover {
+        color:white;
+        opacity:0.75;
+    }
+}
+
+//Homepage Styles
 .home-callout {
     color:white;
     margin-top: -20px;
