--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Disease Z Database</a>
+      <a href="/" class="navbar-brand"><i class="fa fa-stethoscope"></i> Disease Z Database</a>
       
     </div>
     <div class="collapse navbar-collapse" id="main-nav-collapse">
