Added bootstrap js and updated navstyles

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
+<div class= "container text-center">
 <h1>About this project</h1>
+<p> This page is a full knowledge database about a ficticious disease called "The Z Disease". Here users can contribute for data about this disease such as SNPs leading to susceptibility, proteomics, metabolomics and other high-throughput analysis of patient's samples, interactome of molecules related to the disease etc... This project exists as a Web Development exercise for myself. The content of the page is fake and intentionally nonsensical but I tried to give it some realism"</p></p>
+</div>
