--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,11 @@ h1, h2, h3 {
     border:none;
 }
 
+.navbar-brand {
+    font-family:'Open Sans', sans-serif;
+    font-weight: 800;
+}
+
 .navbar-default .navbar-brand, 
 .navbar-default .navbar-nav > li > a {
     color:white;
@@ -45,6 +50,18 @@ h1, h2, h3 {
         opacity:0.75;
     }
 }
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+    border: 2px solid white;
+    &:hover, &:hover {
+       background-color: #c30f0f; opacity: 0.7; 
+    }
+}
+
 
 //Homepage Styles
 .home-callout {
